Fixed issue with persistence