@@ -91,34 +91,53 @@
     	<artifactId>h2</artifactId>
     	<version>2.1.214</version>
 	</dependency>
+	<dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>socialnet</finalName>
-       <plugins>
-  	<plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-            <version>2.6</version>
-            <executions>
-               <execution>
-                  <id>copy-resources</id>
-                  <phase>validate</phase>
-                  <goals>
-                     <goal>copy-resources</goal>
-                  </goals>
-                  
-                  <configuration>
-                     <outputDirectory>${basedir}/target/socialnet/resources
+		<plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+
+						<configuration>
+							<outputDirectory>
+								${basedir}/target/socialnet/resources
                         </outputDirectory>
-                     <resources>          
-                        <resource>
-                           <directory>src/main/resources</directory>
-                           <filtering>true</filtering>
-                        </resource>
-                     </resources>              
-                  </configuration>            
-               </execution>
-            </executions>
-         </plugin>  
-  </plugins>
+							<resources>
+								<resource>
+									<directory>src/main/resources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Fixes issue with Hibernate accessing java's internal classes (java.lang, etc) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.3.1</version>
+				<configuration>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<argLine>
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
 </project>
